--- a/grad_fellow/templates/manage/user.html
+++ b/grad_fellow/templates/manage/user.html
@@ -6,34 +6,33 @@
 
 {% block content %}
     {% if g.user %}
-        {% if g.user %}
-            {% if users %}
-                <br>
-                <table id="userTable" class="display cell-border compact" data-order='[[ 0, "desc" ]]'
-                       data-page-length='5'>
-                    <thead>
+        {% if users %}
+            <br>
+            <table id="userTable" class="display cell-border compact" data-order='[[ 0, "desc" ]]'
+                   data-page-length='5'>
+                <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Update</th>
+                    <th>Delete</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for user in users %}
                     <tr>
-                        <th>Id</th>
-                        <th>Name</th>
-                        <th>Update</th>
-                        <th>Delete</th>
+                        <td>{{ user['id'] }}</td>
+                        <td>{{ user['name'] }}</td>
+                        <td><a class="action" href="javascript:void(0)"
+                               onclick="updateUser('{{ user['name'] }}')">Edit</a>
+                        </td>
+                        <td><a class="action" href="javascript:void(0)" onclick="deleteUser('{{ user['name'] }}')">Delete</a>
+                        </td>
                     </tr>
-                    </thead>
-                    <tbody>
-                    {% for user in users %}
-                        <tr>
-                            <td>{{ user['id'] }}</td>
-                            <td>{{ user['name'] }}</td>
-                            <td><a class="action" href="javascript:void(0)" onclick="updateUser('{{ user['name'] }}')">Edit</a>
-                            </td>
-                            <td><a class="action" href="javascript:void(0)" onclick="deleteUser('{{ user['name'] }}')">Delete</a>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                </table>
-                <hr>
-            {% endif %}
+                {% endfor %}
+                </tbody>
+            </table>
+            <hr>
         {% endif %}
 
         <div>
