--- a/grad_fellow/templates/manage/user.html
+++ b/grad_fellow/templates/manage/user.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-    <h2>{% block title %}User Management{% endblock %}</h2>
+    <h2>{% block title %}{{ block_title }}{% endblock %}</h2>
 {% endblock %}
 
 {% block content %}
